# Stockr

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  seed.py
backend/app/: cache.py  config.py  main.py
backend/app/models/: customer.py  order.py  product.py
backend/app/routers/: customers.py  dashboard.py  orders.py  products.py
backend/app/schemas/: customer.py  order.py  product.py
backend/app/services/: customer_service.py  order_service.py  product_service.py
backend/migrations/: env.py
backend/migrations/versions/: 234225ca4c13_initial_schema.py
backend/tests/: test_business_logic.py
frontend/: .npmrc  Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  queryKeys.ts
frontend/src/components/customers/: CustomerForm.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/orders/: OrderForm.tsx
frontend/src/components/products/: ProductForm.tsx
frontend/src/components/ui/: theme-toggle.tsx
frontend/src/hooks/: useCustomers.ts  useOrders.ts  useProducts.ts
frontend/src/pages/: Customers.tsx  Dashboard.tsx  OrderDetail.tsx  Orders.tsx  Products.tsx
frontend/src/types/: index.ts
